# casacore

./: .dockerignore  .gitattributes  .gitignore  .travis.yml  Aberration_8h.html  Aberration_8h_source.html  AbstractFunctionFactory_8h.html  AbstractFunctionFactory_8h_source.html  Adios2StManColumn_8h.html  Adios2StManColumn_8h_source.html  Adios2StManImpl_8h.html  Adios2StManImpl_8h_source.html  Adios2StMan_8h.html  Adios2StMan_8h_source.html  AipsIOCarray_8h.html  AipsIOCarray_8h_source.html  AipsIOReaderWriter_8h.html  AipsIOReaderWriter_8h_source.html  AipsIO_8h.html  AipsIO_8h_source.html  AipsrcValue_8h.html  AipsrcValue_8h_source.html  AipsrcVector_8h.html  AipsrcVector_8h_source.html  Aipsrc_8h.html  Aipsrc_8h_source.html  AlignMemory_8h.html  AlignMemory_8h_source.html  Allocator_8h.html  Allocator_8h_source.html  AppInfo_8h.html  AppInfo_8h_source.html  AppState_8h.html  AppState_8h_source.html  ArrColData_8h.html  ArrColData_8h_source.html  ArrColDesc_8h.html  ArrColDesc_8h_source.html  ArrayAccessor_8h.html  ArrayAccessor_8h_source.html  (+7026 more)
casa/: Arrays.h  BasicMath.h  BasicSL.h  CMakeLists.txt  Containers.h  Exceptions.h  HDF5.h  IO.h  Inputs.h  Json.h  Logging.h  OS.h  Quanta.h  SConscript  SConstruct  System.h  Utilities.h  aips.cc  aips.h  aipsdef.h  aipsenv.h  aipstype.h  aipsxtype.h  casa.dox  complex.h  config.h.in  fstream.h  iomanip.h  iosfwd.h  iosstrfwd.h  iostream.h  istream.h  math.h  namespace.h  ostream.h  sstream.h  stdexcept.h  stdio.h  stdlib.h  stdmap.h  (+7 more)
casa/Arrays/: Array.h  Array.tcc  Array2.cc  Array2Math.cc  ArrayAccessor.h  ArrayBase.cc  ArrayBase.h  ArrayError.cc  ArrayError.h  ArrayFwd.h  ArrayIO.h  ArrayIO.tcc  ArrayIter.h  ArrayIter.tcc  ArrayLogical.h  ArrayLogical.tcc  ArrayMath.h  ArrayMath.tcc  ArrayMathBase.h  ArrayOpsDiffShapes.cc  ArrayOpsDiffShapes.h  ArrayOpsDiffShapes.tcc  ArrayPartMath.cc  ArrayPartMath.h  ArrayPartMath.tcc  ArrayPosIter.cc  ArrayPosIter.h  ArrayStr.h  ArrayStr.tcc  ArrayUtil.h  ArrayUtil.tcc  ArrayUtil2.cc  Array_tmpl.cc  AxesMapping.cc  AxesMapping.h  AxesSpecifier.cc  AxesSpecifier.h  Changes-May-2020.txt  Cube.h  Cube.tcc  (+49 more)
casa/BasicMath/: ConvertScalar.h  Functional.h  Functional.tcc  Functors.h  Math.cc  Math.h  Primes.cc  Primes.h  Random.cc  Random.h  StdLogical.h
casa/BasicSL/: Complex.cc  Complex.h  Complexfwd.h  Constants.cc  Constants.h  IComplex.cc  IComplex.h  RegexBase.cc  RegexBase.h  STLIO.h  STLIO.tcc  STLMath.cc  STLMath.h  String.cc  String.h
casa/Containers/: Allocator.cc  Allocator.h  Block.cc  Block.h  BlockIO.h  BlockIO.tcc  Block_tmpl.cc  ContainerIO.h  ContainerIO.tcc  HashMap.h  HashMap.tcc  HashMap2.cc  HashMapIO.h  HashMapIO.tcc  HashMapIter.h  HashMapIter.tcc  IterError.cc  IterError.h  Link.h  Link.tcc  List.h  List.tcc  List2.cc  ListIO.h  ListIO.tcc  ManagedObjectPool.h  Map.h  Map.tcc  Map2.cc  MapIO.h  MapIO.tcc  Multiton.h  ObjectPool.h  ObjectPool.tcc  ObjectStack.h  ObjectStack.tcc  OrdMapIO.h  OrdMapIO.tcc  OrdPairIO.h  OrdPairIO.tcc  (+43 more)
casa/Exceptions/: CasaErrorTools.cc  CasaErrorTools.h  Error.h  Error.tcc  Error2.cc
casa/HDF5/: HDF5DataSet.cc  HDF5DataSet.h  HDF5DataType.cc  HDF5DataType.h  HDF5Error.cc  HDF5Error.h  HDF5File.cc  HDF5File.h  HDF5Group.cc  HDF5Group.h  HDF5HidMeta.cc  HDF5HidMeta.h  HDF5Object.cc  HDF5Object.h  HDF5Record.cc  HDF5Record.h
casa/IO/: AipsIO.cc  AipsIO.h  AipsIOCarray.h  AipsIOCarray.tcc  ArrayIO.h  ArrayIO.tcc  BaseSinkSource.cc  BaseSinkSource.h  BucketBase.cc  BucketBase.h  BucketBuffered.cc  BucketBuffered.h  BucketCache.cc  BucketCache.h  BucketFile.cc  BucketFile.h  BucketMapped.cc  BucketMapped.h  ByteIO.cc  ByteIO.h  ByteSink.cc  ByteSink.h  ByteSinkSource.cc  ByteSinkSource.h  ByteSource.cc  ByteSource.h  CanonicalIO.cc  CanonicalIO.h  ConversionIO.cc  ConversionIO.h  FileLocker.cc  FileLocker.h  FileUnbufferedIO.cc  FileUnbufferedIO.h  FilebufIO.cc  FilebufIO.h  FiledesIO.cc  FiledesIO.h  IO_1.html  IPositionIO.cc  (+35 more)
casa/Inputs/: Input.cc  Input.h  Param.cc  Param.h
casa/Json/: JsonError.cc  JsonError.h  JsonGram.ll  JsonGram.yy  JsonKVMap.cc  JsonKVMap.h  JsonOut.cc  JsonOut.h  JsonOut.tcc  JsonParser.cc  JsonParser.h  JsonValue.cc  JsonValue.h
casa/Logging/: LogFilter.cc  LogFilter.h  LogIO.cc  LogIO.h  (+16 more)
components/: CMakeLists.txt  ComponentModels.h  SConstruct  components.dox
coordinates/: CMakeLists.txt  Coordinates.h  SConstruct  coordinates.dox
derivedmscal/: CMakeLists.txt  DerivedMC.h  derivedmscal.dox
fits/: CMakeLists.txt  FITS.h  SConscript  SConstruct  fits.dox
images/: CMakeLists.txt  Images.h  Regions.h  SConscript  SConstruct  images.dox
lattices/: CMakeLists.txt  LEL.h  LRegions.h  LatticeMath.h  Lattices.h  SConscript  SConstruct  lattices.dox
meas/: CMakeLists.txt  MeasUDF.h  SConscript  meas.dox
measures/: CMakeLists.txt  Measures.h  SConscript  SConstruct  TableMeasures.h  casacore.rc.in  measures.dox
mirlib/: CMakeLists.txt  README  SConscript  SConstruct  bug.c  dio.c  headio.c  hio.c  hio.h  io.h  key.c  maskio.c  maxdimc.h  miriad.h  pack.c  scrio.c  sysdep.h  uvio.c  xyio.c  xyzio.c
ms/: CMakeLists.txt  MSOper.h  MSSel.h  MeasurementSets.h  SConscript  SConstruct  ms.dox
msfits/: CMakeLists.txt  MSFits.h  SConstruct  msfits.dox
python/: CMakeLists-cmake3.12.txt  CMakeLists-cmake3.14.txt  CMakeLists-older-cmake.txt  CMakeLists.txt  Converters.h  python.dox
python3/: CMakeLists-cmake3.12.txt  CMakeLists-cmake3.14.txt  CMakeLists-older-cmake.txt  CMakeLists.txt
scimath/: CMakeLists.txt  Fitting.h  Functionals.h  Mathematics.h  SConstruct  scimath.dox
scimath_f/: ADDGRD.f  CMakeLists.txt  SConscript  abshis.f  absmax.f  atmroutines.f  convolvegridder.f  dfftpak.f  dqags.f  fftpak.f  fgridft.f  fgridsd.f  fmosft.f  fwproj.f  getbig.f  grd2d.f  grd2dwts.f  grdde2d.f  grdgauss.f  grdjinc1.f  grdsf.f  hclean.f  lawson.f  maxabs.f  parametricsolver.f  phasol.f  subcom.f  vvroutines.f
tables/: CMakeLists.txt  DataMan.h  LogTables.h  PlainTable.drawio.svg.extrahtml  SConscript  SConstruct  TaQL.h  Table.drawio.svg.extrahtml  TableOverview.drawio.svg.extrahtml  Tables.h  tables.dox
(+9964 files in other folders)
